file direction commit

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -605,7 +605,7 @@
         integrity="sha512-tQQXRDB2wEmuJGtFrmmoFYzNTq8StA1XJrfO0OQbbTxd9G0CwaTDL6/C1y805IlvBVrMwOqob1kf6r/2U5XXVg=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <!-- connecting js file -->
-    <script src="./script.js"></script>
+    <script src="./../JavaScript/script.js"></script>
 </body>
 
 </html>
