once changing commit

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -53,7 +53,7 @@
                 <!-- image section -->
                 <div class="hero">
                     <!-- image -->
-                    <img src="./../imgs/man_-removebg.png" alt="person photo">
+                    <img src="./../imgs/prateek-removebg-preview.png" alt="person photo">
                     <div class="hero-bottom-bar"></div>
                 </div>
             </div>
@@ -133,16 +133,16 @@
                 </ul>
                 <!-- social media -->
                 <nav class="social-img">
-                    <a href="#"><img src="./../imgs/indeed.jpeg" alt="indeed"></a>
-                    <a href="https://www.naukri.com/mnjuser/homepage"><img src="./../imgs/Naukri.png" alt="naukri"></a>
-                    <a href="#"><img src="./../imgs/Apana.png" alt="apana"></a>
+                    <a href=""><img src="./../imgs/indeed.jpeg" alt="indeed"></a>
+                    <a href=""><img src="./../imgs/Naukri.png" alt="naukri"></a>
+                    <a href=""><img src="./../imgs/Apana.png" alt="apana"></a>
                 </nav>
             </div>
 
             <!-- page2 right section  -->
             <div class="page2-right">
                 <!-- person image -->
-                <img src="./../imgs/man .jpeg" alt="person">
+                <img src="./../imgs/prateek.png" alt="person">
             </div>
         </section>
     </main>
