final change commit

--- a/public/index.html
+++ b/public/index.html
@@ -581,12 +581,12 @@
         <!-- footer section -->
         <footer class="conclusion">
             <h2 class="greetings">Thank <span>You</span></h2>
-            <h4 class="greetings">For Visiting My Prot<span>folio</span></h4>
+            <h4 class="greetings">For Visiting My Port<span>folio</span></h4>
             <h5 class="greetings"> <span>&copy;</span> 2025</h5>
         </footer>
 
         <div class="last">
-            <h4><i class="ri-phone-line" style="color:green;"></i> 6361935438</h4>
+            <h4><i class="ri-phone-line" style="color:green;"></i> +916361935438</h4>
             <h4><i class="ri-mail-line" style="color: red;"></i> prateekkumarsn@gmail.com</h4>
         </div>
     </main>
