--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     <main class="home" id="Home">
         <!-- slider menu-bar for mobile  -->
         <aside id="menu-bar">
-            <h3><a href="#">Home</a></h3>
+            <h3><a href="#Home">Home</a></h3>
             <h3><a href="#About">About</a></h3>
             <h3><a href="#Skills">Skills</a></h3>
             <h3><a href="#Contact">Contact</a></h3>
@@ -555,7 +555,7 @@
                     <img class="photo" src="./imgs/skills-img/testing.png" alt="testing">
                 </div>
                 <div class="card-name">
-                    <h6>MySQL</h6>
+                    <h6>Testing</h6>
                 </div>
                 <div class="card-discription">
                     <ul>
