final last commit

--- a/public/index.html
+++ b/public/index.html
@@ -389,7 +389,7 @@
                     <p>
                     <ul>
                         <li>
-                          Strong knowledge of HTML5 for building structured and semantic web pages.
+                            Strong knowledge of HTML5 for building structured and semantic web pages.
                         </li>
                         <br>
                         <li>
@@ -423,11 +423,12 @@
                         </li>
                         <br>
                         <li>
-                            Knowledge of different type of selector like "class selector, Id selector, Descendant selector, Child selector, and Adjacent Sibling selector" etc.
+                            Knowledge of different type of selector like "class selector, Id selector, Descendant
+                            selector, Child selector, and Adjacent Sibling selector" etc.
                         </li>
                         <br>
                         <li>
-                            Strong knowledge of mobile responsive on web development.   
+                            Strong knowledge of mobile responsive on web development.
                         </li>
                     </ul>
                     </p>
@@ -475,7 +476,7 @@
                     <p>
                     <ul>
                         <li>
-                            Proficient of Object-Oriention, data types & variables. 
+                            Proficient of Object-Oriention, data types & variables.
                         </li>
                         <br>
                         <li>
@@ -517,7 +518,7 @@
                         </li>
                         <br>
                         <li>
-                           Basic understanding of Object-Oriention. 
+                            Basic understanding of Object-Oriention.
                         </li>
                     </ul>
                     </p>
